helvetireader.css
/* ... */
/* Custom icons */
.entry .entry-actions .broadcast{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/share.png) no-repeat !important;
	background-position:0px 0px !important;
}
.entry .entry-actions .broadcast-active{
	background-position:0px -14px !important;
}
.entry .entry-actions .broadcast-with-note{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/note.png) no-repeat !important;
	background-position:0px 0px !important;
}
.entry .entry-actions .like{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/like.png) no-repeat !important;
	background-position:0px 0px !important;
}
.entry .entry-actions .like-active{
	background-position:0px -17px !important;
}
.entry .entry-actions .email{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/email.png) no-repeat !important;
	background-position:0px 3px !important;
}
.entry .entry-actions .email-active{
	background-position:0px -14px !important;
}
.entry .entry-actions .read-state{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/unread.png) no-repeat !important;
	background-position:0px 0px !important;
}
.entry .entry-actions .read-state-kept-unread{
	background-position:0px -14px !important;
}
.entry .entry-actions .item-link{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/sendto.png) no-repeat !important;
	background-position:0px 0px !important;
}
.entry .entry-actions .tag{
	background: transparent url(chrome-extension://ljbmahedhikjhjkeaefhhcalhmidebkk/images/tag.png) no-repeat !important;
	background-position:0px 0px !important;
}

/* End of custom icons */

#loading-area .message-area-inner{background-color: #8291b8 !important; color: #fff !important;}

#nav {margin: 0 0 0 12px !important; width: 240px !important;}
#nav li, #nav div {font-size: 12px !important;}

.subscribe-button {
	margin: 0 0 0 10px !important;
	padding-left: 2px !important;
	background-position: -64px -81px !important;
	height: 20px !important;
	font-weight: bold;
	/*border:1px solid #ddd;*/
	padding: 2px;
	border-radius:3px;
	color: #888;
}
.folder-name-text,
.scroll-tree .name,
.selector .text,
a#sub-tree-subscriptions,
#recommendations-tree-view-all {
	color: #969696 !important; 
	font-weight: bold;
}

#sub-tree .folder-name-text {margin: 0 0 0 4px !important;}
#lhn-subscriptions { margin: 20px 0 0 0 !important;}
.unread-count { color: rgba(144,160,203,0.55);}
.tree-link-selected { background: none !important; }
.tree-link-selected .name-text { color: #000 !important;}

#lhn-selectors .selected,#lhn-selectors .selected:hover{ 
	background-color:transparent !important;
}

.selected .link,.selected .text {
	color: #657094 !important;
	font-weight: bold !important;			
}

.entry-main {
	padding: 0 0 2.3em 0 !important;
	margin: 0 10px 0 35px !important;
}

.entry .entry-body{padding: 20px 0 0 0 !important}

.entry { background: transparent !important;}
.entries-list .expanded {margin: 20px 0 !important;}

.card-content .entry-title {
	font-size: 18px !important;
	margin: 0 !important;
}

.entry-author, .entry-author a {
	font-weight: bold;
	font-size: 11px;
	color: #cdcdcd !important;
}

.entry-date,.entry-actions .link, #sub-tree-subscriptions, .scroll-tree a .name {
	color: #909090 !important;
}
.card-content .entry-date {
	float:none !important;	
	position: absolute;
	bottom: 0;
	font-size: 11px;
}

#current-entry .entry-title-link {color: #657094 !important;}

#current-entry .entry-author a:hover { color: #657094 !important; }
#viewer-footer {padding:3px 3px 3px 10px !important}
.card-content, #current-entry .card-content {padding:10px !important;}

.card-bottom { padding: 0px !important; }
.card-content .star{margin-top: 3px;}
.entry-title-link { color: #666 !important;}
.entry-comments { margin-left: 35px !important;}

.entry-actions {
	border-top: 1px solid #eee;
	padding: 8px 6px 8px 40px !important;
}

/* @end */

/* @group Full */

#gbar,
.scroll-filler-recs-message .secondary,
#directory-selector,
#recommendations-tree,
#lhn-recommendations,
#viewer-footer,
#your-items-tree,
#chrome-view-links,
#trends-selector,
#overview-selector,
#lhn-friends,
#entries-status,
.entry-likers,
#search-restrict,
#search-submit,
#viewer-top-controls,
#ogspacer,
.entry-actions .star,
.entry-title-go-to,
#chrome-title,
#chrome-lhn-toggle,
#lhn-selectors .selector-icon  {display: none !important;}

#search { 
	margin: 0!important; 
	left: 35px !important;
	top: 40px !important;	
}

#search-input { 
	border: 1px solid #ddd !important; 
	font-size:11px;
	color: #aaa;
	padding: 1px;
	height: 8px !important;
	-webkit-border-radius: 10px;
	outline: none;
	width: 200px !important;
}

#chrome { margin: -45px 0 10px 245px !important;}

/* @end */

/* @group Ankit's mods */

.scroll-tree .name:not(.folder-name){
	padding-left: 12px !important;
}
.sub-icon{
	display:none !important;
}
.subscribe-button{
	background-image:none !important;
}
#sub-tree ul ul li a{
	padding-left: 40px !important;
}
.section-minimize{
	right: 12px !important;
}
#lhn-selectors-menubutton,#lhn-subscriptions-menubutton{
	right: -2px !important;
}
.entry-actions{
	font-size: 11px !important;
}
.tree-link-selected .name-text{
	color:#657094 !important;
}
.scroll-tree .link:hover{
	border-radius:2px !important;
}

/* @group Scrollbars */

::-webkit-scrollbar {
	width: 7px;
	height: 7px;
}

::-webkit-scrollbar-button:start:decrement,
::-webkit-scrollbar-button:end:increment{
	display:none;
}

::-webkit-scrollbar-button:start:increment,
::-webkit-scrollbar-button:end:decrement {
    display: none;
}
::-webkit-scrollbar-track-piece{
	border-radius:7px;
	background-color: #e1e1e1;	
}

::-webkit-scrollbar-thumb:vertical {
    height: 100px;
	border-radius:7px;
    background-color: #878787;	
}
/* ... */

